- 회인 가입 레이아웃 완료 - css, js 파일 분리

--- a/MBoardProject/MBoardProject.csproj
+++ b/MBoardProject/MBoardProject.csproj
@@ -136,8 +136,9 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\custom\board.css" />
-    <Content Include="Content\custom\join.css" />
+    <Content Include="Content\custom\boardview.css" />
+    <Content Include="Content\custom\joinview.css" />
+    <Content Include="Content\custom\layout.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -145,9 +146,11 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\custom\board.js" />
+    <Content Include="Scripts\custom\boardview.js" />
     <Content Include="Scripts\custom\common.js" />
-    <Content Include="Scripts\custom\join.js" />
+    <Content Include="Scripts\custom\joinview.js" />
+    <Content Include="Scripts\custom\layout.js" />
+    <Content Include="Scripts\custom\login.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -175,6 +178,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Board\BoardView.cshtml" />
     <Content Include="Views\Board\JoinView.cshtml" />
+    <Content Include="Views\Board\CreateView.cshtml" />
+    <Content Include="Views\Board\ReadView.cshtml" />
+    <Content Include="Views\Board\EditView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
